[tool.poetry]
name = "homework-19-2-"
version = "0.1.0"
description = ""
authors = ["Kirillov_Ivan <kirillovio@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
ipython = "^8.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
